--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,7 +49,7 @@
                                     Made In</a>
                             </th>
                             <th><a
-                                    th:href="@{'/page/' + ${currentPage} + '?sortField=id&sortDir=' + ${reverseSortDir} + ${keyword != null ? '&keyword=' + keyword : ''}}">
+                                    th:href="@{'/page/' + ${currentPage} + '?sortField=price&sortDir=' + ${reverseSortDir} + ${keyword != null ? '&keyword=' + keyword : ''}}">
                                     Price</a>
                             </th>
                             <th><a>Actions</a></th>
